Wire archive manager to job registry

--- a/app/templates/app_shell.html
+++ b/app/templates/app_shell.html
@@ -42,6 +42,7 @@
     </div>
 
     <script type="module" src="/static/js/te_state.js"></script>
+    <script type="module" src="/static/js/te_ui.js"></script>
     <script type="module" src="/static/js/file_picker.js"></script>
     <script id="__app_id_json" type="application/json">{{ app_id|tojson }}</script>
     <script type="module">
