Implement streaming job progress and documentation

--- a/app/templates/app_shell.html
+++ b/app/templates/app_shell.html
@@ -43,6 +43,7 @@
 
     <script type="module" src="/static/js/te_state.js"></script>
     <script type="module" src="/static/js/te_ui.js"></script>
+    <script type="module" src="/static/js/jobs_client.js"></script>
     <script type="module" src="/static/js/file_picker.js"></script>
     <script id="__app_id_json" type="application/json">{{ app_id|tojson }}</script>
     <script type="module">
