--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -164,6 +164,7 @@
 
     <!-- Settings Gear Icon -->
     <script type="module" src="/static/js/te_ui.js"></script>
+    <script type="module" src="/static/js/jobs_client.js"></script>
     <script type="module" src="/static/js/file_picker.js"></script>
     <script type="module">
         window.teFetch = async (url, options) => {
